Windows: upgrade to JDK 21